tests/errors/4_type_errors/boolop-test25.ifj.java
class Main {
    static void run() {
        String a = "str";
        if(true && a) { // and with a different type than boolean

        }
        
    }
}